k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tec-challenge-app
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tec-challenge
  template:
    metadata:
      labels:
        app: tec-challenge
    spec:
      containers:
      - name: tec-challenge-container
        image: IMAGE_TAG_PLACEHOLDER
        ports:
        - containerPort: 80
