k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tec-challenge-service
spec:
  type: ClusterIP
  selector:
    app: tec-challenge
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
